examples/test/testpolicy8047.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8047
  namespace: namespace432
spec:
  podSelector:
    matchLabels:
      key44: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value38
          key21: value33
      podSelector:
        matchLabels:
          key19: value33
          key18: value18
